--- a/themes/climatestrike/scss/partials/5.inbox/_inbox.scss
+++ b/themes/climatestrike/scss/partials/5.inbox/_inbox.scss
@@ -26,6 +26,10 @@ This theme is licensed under GPL v3.0
     width: 100%;
 
     box-sizing: border-box;
+
+    @include respond(max-width, 800px) {
+        padding-top: 5em;
+    }
 }
 
 #facebook-event-frame {
